syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service SystemLanguageCode{
	rpc GetSystemLanguageCode(IdLanguage) returns (SystemLanguageCodeReply);
	rpc GetSystemLanguageCodes(google.protobuf.Empty) returns (SystemLanguageCodes);
	rpc AddSystemLanguageCode(SystemLanguageCodes) returns (google.protobuf.Empty);
	rpc UpdateSystemLanguageCode(SystemLanguageCodes) returns (google.protobuf.Empty);
	rpc DeleteSystemLanguageCode(SystemLanguageCodes) returns (google.protobuf.Empty);
}

message IdLanguage{
	string Id =1;
}

message SystemLanguageCodes{
	repeated SystemLanguageCodeReply SystemLangCodes =1;
}

message SystemLanguageCodeReply{
	string LanguageID = 1;
	string Name =2;
	string NativeName =3;
}
